--- a/html/main.html
+++ b/html/main.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-    // Top Box
+    <!-- Top Box -->
     <div class="top-box">
         <a href="/intro" class="link">ABOUT US</a>
         <img src="images/Logo.png" alt="Logo" style="height: 60px; width: auto;">
