--- a/html/main.html
+++ b/html/main.html
@@ -1,43 +1,18 @@
-<!-- main.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
-    <style>
-        @font-face {
-            font-family: 'Instrument Sans';
-            src: url('/fonts/instrument-sans-bold.ttf') format('truetype');
-            font-weight: bold;
-        }
-        body {
-            background-color: #7F5C38;
-            font-family: 'Instrument Sans', sans-serif;
-            margin: 0;
-        }
-        .top-box {
-            background-color: #5B3A1D;
-            width: 100%;
-            height: 100px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 20px;
-        }
-        .link {
-            color: #D9D9D9;
-            font-weight: bold;
-            font-size: 1.2em;
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
     <!-- Top Box -->
     <div class="top-box">
         <a href="/intro" class="link">ABOUT US</a>
-        <img src="images/Logo.png" alt="Logo" style="height: 60px; width: auto;">
+        <div class="logo-container">
+            <img src="images/Logo.png" alt="Logo" style="height: 60px; width: auto;">
+        </div>
         <a href="/sum" class="link">ORDER!</a>
     </div>
     <div class="message">Work in progress...</div>
