Added adnimations (not 100% done) and fixes some stuff, I'll make it neat once done

--- a/html/main.html
+++ b/html/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main Page</title>
+    <title>Welcome to Moses Coffee</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -10,11 +10,14 @@
     <!-- Top Box -->
     <div class="top-box">
         <a href="/intro" class="link">ABOUT US</a>
-        <div class="logo-container">
+        <a class="logo-container" href="/">
             <img src="images/Logo.png" alt="Logo" style="height: 60px; width: auto;">
-        </div>
-        <a href="/sum" class="link">ORDER!</a>
+        </a>
+        <a href="/sum" class="link">  ORDER!</a>
     </div>
-    <div class="message">Work in progress...</div>
+
+    <!-- The rest -->
+    <img src="images/sign.png" class="fade-in-sign" alt="Sign">
+
 </body>
 </html>
